--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
 <p>Kaifei Chen (陈凯飞)</p>
 <p>kaifei@berkeley.edu</p>
-<p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p>Update: I'm now a Software Engineer at Waymo.</p>
-<p>Kaifei is a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. He is in the <a href="http://bets.cs.berkeley.edu/">Building-Energy-Transportation Systems</a> group.</p>
+<p>Kaifei is a Software Engineer at <a href="https://waymo.com/">Waymo</a>. He obtained his Ph.D. in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a> in summer 2018, advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/katz.html">Prof. Randy Katz</a> and <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/culler.html">Prof. David Culler</a>. He was in the <a href="http://bets.cs.berkeley.edu/">Building, Energy, Transportation Systems</a> group. His research interests are in the areas of sensor systems, networking, and applications, such as indoor localization, mobile augmented reality, and smart buildings.</p>
 <br>
 
 <h3>Publications</h3>
@@ -93,6 +91,10 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   IPSN 2012<br>
   [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
+<p>Vision-based Appliance Identification and Control with Smartphone Sensors in Commercial Buildings<br>
+  <u>Kaifei Chen</u>.<br>
+  UC Berkeley Dissertation<br>
+  [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-111.pdf">PDF</a>]</p>
 <p>WAVE: A Decentralized Authorization System for IoT via Blockchain Smart Contracts<br>
   Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, Gabriel Fierro, David E. Culler, and Raluca Ada Popa.<br>
   UC Berkeley EECS Technical Reports 2017<br>
