--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
 <p>Kaifei Chen (陈凯飞)</p>
-<p>kaifei@berkeley.edu</p>
+<p>[My First Name]@berkeley.edu</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
 <p>Kaifei is a Software Engineer at <a href="https://waymo.com/">Waymo</a>. He obtained his Ph.D. in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a> in summer 2018, advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/katz.html">Prof. Randy Katz</a> and <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/culler.html">Prof. David Culler</a>. He was in the <a href="http://bets.cs.berkeley.edu/">Building, Energy, Transportation Systems</a> group. His research interests are in the areas of sensor systems, networking, and applications, such as indoor localization, mobile augmented reality, and smart buildings.</p>
