--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
 <meta charset="utf-8">
-<p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
+<p><img width="200" src="./img/kaifei.jpg" onmouseover="this.src='./img/coffee.jpg'" onmouseout="this.src='./img/kaifei.jpg'"/></p>
 <p>Kaifei Chen (陈凯飞)</p>
-<p>[My First Name]@berkeley.edu</p>
+<p>[My First Name]<img src="./img/at-symbol.jpg" height="16">berkeley.edu</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
 <p>Kaifei is a Software Engineer at <a href="https://waymo.com/">Waymo</a>. He obtained his Ph.D. in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a> in summer 2018, advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/katz.html">Prof. Randy Katz</a> and <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/culler.html">Prof. David Culler</a>. He was in the <a href="http://bets.cs.berkeley.edu/">Building, Energy, Transportation Systems</a> group. His research interests are in the areas of sensor systems, networking, and applications, such as indoor localization, mobile augmented reality, and smart buildings.</p>
@@ -20,28 +20,28 @@
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
   IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
-  [<a href="./data/ubicomp_18.pdf">PDF</a>]</p>
+  [<a href="./pubs/ubicomp_18.pdf">PDF</a>]</p>
 <p>Democratizing Authority in the Built Environment<br>
 Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
   BuildSys 2017<br>
-  [<a href="./data/buildsys_17.pdf">PDF</a>]</p>
+  [<a href="./pubs/buildsys_17.pdf">PDF</a>]</p>
 <p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Mohammed Aljarrah, and Philippe Bonnet.<br>
   IoTDI 2016<br>
-  [<a href="./data/iotdi_16.pdf">PDF</a>]</p>
+  [<a href="./pubs/iotdi_16.pdf">PDF</a>]</p>
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
   SenSys 2014<br>
-  [<a href="./data/sensys_14.pdf">PDF</a>][<a href="./data/sensys_14.pptx">Slides</a>]</p>
+  [<a href="./pubs/sensys_14.pdf">PDF</a>][<a href="./pubs/sensys_14.pptx">Slides</a>]</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
   IPSN 2012<br>
-  [<a href="./data/ipsn_12.pdf">PDF</a>]</p>
+  [<a href="./pubs/ipsn_12.pdf">PDF</a>]</p>
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
   <i>Affiliated demo won the Best Demo Award</i><br>
-  [<a href="./data/ubicomp_11.pdf">PDF</a>]</p>
+  [<a href="./pubs/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
 <p>Towards Adaptive Actors for Scalable IoT Applications at the Edge<br>
   Jonathan Fürst, Mauricio Fadel Argerich, <u>Kaifei Chen</u>, Ernö Kovacs<br>
@@ -50,46 +50,46 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
 <p>Evaluating Bluetooth Low Energy for IoT<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Hyung-Sin Kim, Philippe Bonnet.<br>
   The International Workshop on Benchmarking Cyber-Physical Networks and Systems (CPSBench) 2018<br>
-  [<a href="./data/cpsbench_18.pdf">PDF</a>]</p>
+  [<a href="./pubs/cpsbench_18.pdf">PDF</a>]</p>
 <p>Crowd-sourced BMS Point Matching and Metadata Maintenance with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
   The International Workshop on Crowd-Assisted Sensing, Pervasive Systems, and Communications (CASPer) 2016<br>
-  [<a href="./data/casper_16.pdf">PDF</a>]</p>
+  [<a href="./pubs/casper_16.pdf">PDF</a>]</p>
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
   <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
   The International Workshop on IoT Challenges in Mobile and Industrial Systems (IoT-Sys) 2015<br>
-  [<a href="./data/iot-sys_15.pdf">PDF</a>][<a href="./data/iot-sys_15.pptx">Slides</a>]</p>
+  [<a href="./pubs/iot-sys_15.pdf">PDF</a>][<a href="./pubs/iot-sys_15.pptx">Slides</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
   BuildSys 2012<br>
-  [<a href="./data/buildsys_12.pdf">PDF</a>]</p>
+  [<a href="./pubs/buildsys_12.pdf">PDF</a>]</p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Chieh-Jan Mike Liang, and Feng Zhao.<br>
   The International Workshop on Mobile Sensing 2012<br>
-  [<a href="./data/wms_12.pdf">PDF</a>]</p>
+  [<a href="./pubs/wms_12.pdf">PDF</a>]</p>
 <h4>Demos</h4>
 <p>Smart Appliance Identification using Smartphone Camera<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, David E. Culler, and Randy H. Katz.<br>
   HotMobile 2017<br>
-  [<a href="./data/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="./pubs/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo Abstract: Human-in-the-loop BMS Point Matching and Metadata Labeling with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
   BuildSys 2015<br>
-  [<a href="./data/buildsys_15_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="./pubs/buildsys_15_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
   <i>Best Demo Award</i><br>
-  [<a href="./data/sensys_11_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="./pubs/sensys_11_demo_abstract.pdf">PDF</a>]</p>
 <h4>Posters</h4>
 <p>Poster Abstract: Intuitive Appliance Identification using Image Matching in Smart Buildings<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, Dezhi Hong, and Randy H. Katz.<br>
   BuildSys 2015<br>
-  [<a href="./data/buildsys_15_poster_abstract.pdf">PDF</a>] [<a href="./data/buildsys_15_poster.pdf">Poster</a>]</p>
+  [<a href="./pubs/buildsys_15_poster_abstract.pdf">PDF</a>] [<a href="./pubs/buildsys_15_poster.pdf">Poster</a>]</p>
 <p>Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
   IPSN 2012<br>
-  [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
+  [<a href="./pubs/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
 <p>Vision-based Appliance Identification and Control with Smartphone Sensors in Commercial Buildings<br>
   <u>Kaifei Chen</u>.<br>
