--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
 <br>
 
 <h3>Professional Activities:</h3>
-<p>2018: TPC: <a href="https://ubicomp18.github.io/workshop18-cpd/">CPD 2018 (Workshop in Ubicomp)</a>, Reviewer: <a href="http://infocom2019.ieee-infocom.org/">INFOCOM 2019</a>, <a href="http://ieee-iotj.org/">IEEE IoT Journal</a></p>
+<p>2018: TPC: <a href="https://ubicomp18.github.io/workshop18-cpd/">CPD 2018 (Workshop in Ubicomp)</a>, Reviewer: <a href="https://imwut.acm.org/">IMWUT/UbiComp (August)</a>, <a href="http://infocom2019.ieee-infocom.org/">INFOCOM 2019</a>, <a href="http://ieee-iotj.org/">IEEE IoT Journal</a></p>
 <p>2017: TPC: <a href="http://secon2017.ieee-secon.org/workshop/1st-workshop-smart-and-connected-indoor-environments">SCIE 2017 (Workshop in SECON)</a></p>
 <p>2016: TPC: <a href="http://ipsn.acm.org/2016/posters.html">IPSN 2016 Demo</a>, <a href="http://sensys.acm.org/2016/demos/">SenSys 2016 Demo</a>, <a href="https://www.sigmobile.org/mobisys/2016/workshops/phd/index.htm">MobiSys 2016 PhD Forum</a></p>
 <p> 2014: Sub-reviewer: <a href="http://www.icpads.org/">ICPADS 2014</a></p>
