add sensys papers

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
   To Appear in SenSys 2018<br>
-  [<a href="./pubs/marvel_sensys_18.pdf">PDF</a>]</p>
+  [<a href="./pubs/sensys_18_marvel.pdf">PDF</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
   To Appear in SenSys 2018<br>
-  [<a href="./pubs/hamilton_sensys_18.pdf">PDF</a>]</p>
+  [<a href="./pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
   IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
