--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 <h4>Conferences</h4>
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
-  To Appear in SenSys 2018<br>
+  SenSys 2018<br>
   [<a href="./pubs/sensys_18_marvel.pdf">PDF</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
-  To Appear in SenSys 2018<br>
+  SenSys 2018<br>
+  <i>Best Paper Runner-up</i><br>
   [<a href="./pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
@@ -51,6 +52,10 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   <i>Affiliated demo won the Best Demo Award</i><br>
   [<a href="./pubs/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
+<p>Automated Wireless Localization Data Acquisition and Calibration with 6DOF Image Localization<br>
+Jonathan Fürst, <u>Kaifei Chen</u>, Gürkan Solmaz, Ernö Kovacs<br>
+  The International Workshop on Combining Physical and Data-Driven Knowledge in Ubiquitous Computing (CPD) 2018<br>
+  [<a href="./pubs/cpd18.pdf">PDF</a>]</p>
 <p>Towards Adaptive Actors for Scalable IoT Applications at the Edge<br>
   Jonathan Fürst, Mauricio Fadel Argerich, <u>Kaifei Chen</u>, Ernö Kovacs<br>
   The International Workshop on Very Large Internet of Things (VLIoT) 2018<br>
