--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
   SenSys 2018<br>
-  [<a href="./pubs/sensys_18_marvel.pdf">PDF</a>]</p>
+  [<a href="./pubs/sensys_18_marvel.pdf">PDF</a>][<a href="./pubs/sensys_18_marvel.pptx">Slides</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
   SenSys 2018<br>
@@ -29,7 +29,7 @@ Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zha
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
   IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
-  [<a href="./pubs/ubicomp_18.pdf">PDF</a>]</p>
+  [<a href="./pubs/ubicomp_18.pdf">PDF</a>][<a href="./pubs/ubicomp_18.pptx">Slides</a>]</p>
 <p>Democratizing Authority in the Built Environment<br>
 Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
   BuildSys 2017<br>
