--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
   SenSys 2018<br>
-  [<a href="./pubs/sensys_18_marvel.pdf">PDF</a>][<a href="./pubs/sensys_18_marvel.pptx">Slides</a>]</p>
+  [<a href="/pubs/sensys_18_marvel.pdf" download>PDF</a>][<a href="/pubs/sensys_18_marvel.pptx" download>Slides</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
   SenSys 2018<br>
   <i>Best Paper Runner-up</i><br>
-  [<a href="./pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
+  [<a href="/pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
   IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
-  [<a href="./pubs/ubicomp_18.pdf">PDF</a>][<a href="./pubs/ubicomp_18.pptx">Slides</a>]</p>
+  [<a href="/pubs/ubicomp_18.pdf">PDF</a>][<a href="/pubs/ubicomp_18.pptx">Slides</a>]</p>
 <p>Democratizing Authority in the Built Environment<br>
 Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
   BuildSys 2017<br>
-  [<a href="./pubs/buildsys_17.pdf">PDF</a>]</p>
+  [<a href="/pubs/buildsys_17.pdf">PDF</a>]</p>
 <p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Mohammed Aljarrah, and Philippe Bonnet.<br>
   IoTDI 2016<br>
-  [<a href="./pubs/iotdi_16.pdf">PDF</a>]</p>
+  [<a href="/pubs/iotdi_16.pdf">PDF</a>]</p>
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
   SenSys 2014<br>
-  [<a href="./pubs/sensys_14.pdf">PDF</a>][<a href="./pubs/sensys_14.pptx">Slides</a>]</p>
+  [<a href="/pubs/sensys_14.pdf">PDF</a>][<a href="/pubs/sensys_14.pptx">Slides</a>]</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
   IPSN 2012<br>
-  [<a href="./pubs/ipsn_12.pdf">PDF</a>]</p>
+  [<a href="/pubs/ipsn_12.pdf">PDF</a>]</p>
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
   <i>Affiliated demo won the Best Demo Award</i><br>
-  [<a href="./pubs/ubicomp_11.pdf">PDF</a>]</p>
+  [<a href="/pubs/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
 <p>Automated Wireless Localization Data Acquisition and Calibration with 6DOF Image Localization<br>
 Jonathan Fürst, <u>Kaifei Chen</u>, Gürkan Solmaz, Ernö Kovacs<br>
