--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
   SenSys 2018<br>
-  [<a href="pubs/sensys_18_marvel.pdf" download>PDF</a>][<a href="pubs/sensys_18_marvel.pptx" download>Slides</a>]</p>
+  [<a href="pubs/sensys_18_marvel.pdf" type="application/pdf">PDF</a>][<a href="pubs/sensys_18_marvel.pptx">Slides</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
   SenSys 2018<br>
