--- a/index.html
+++ b/index.html
@@ -20,42 +20,42 @@
 <p>MARVEL: Enabling Mobile Augmented Reality with Low Energy and Low Latency<br>
 <u>Kaifei Chen</u>, Tong Li, Hyung-Sin Kim, David E. Culler, and Randy H. Katz.<br>
   SenSys 2018<br>
-  [<a href="raw/master/pubs/sensys_18_marvel.pdf" type="application/pdf">PDF</a>][<a href="raw/master/pubs/sensys_18_marvel.pptx">Slides</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_18_marvel.pdf">PDF</a>][<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_18_marvel.pptx">Slides</a>]</p>
 <p>System Architecture Directions for Post-SoC/32-bit Networked Sensors<br>
 Hyung-Sin Kim, Michael P Andersen, <u>Kaifei Chen</u>, Sam Kumar, William J. Zhao, Kevin Ma, and David E. Culler.<br>
   SenSys 2018<br>
   <i>Best Paper Runner-up</i><br>
-  [<a href="raw/master/pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_18_hamilton.pdf">PDF</a>]</p>
 <p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
 <u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
   IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
-  [<a href="raw/master/pubs/ubicomp_18.pdf">PDF</a>][<a href="raw/master/pubs/ubicomp_18.pptx">Slides</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/ubicomp_18.pdf">PDF</a>][<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/ubicomp_18.pptx">Slides</a>]</p>
 <p>Democratizing Authority in the Built Environment<br>
 Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
   BuildSys 2017<br>
-  [<a href="raw/master/pubs/buildsys_17.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/buildsys_17.pdf">PDF</a>]</p>
 <p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Mohammed Aljarrah, and Philippe Bonnet.<br>
   IoTDI 2016<br>
-  [<a href="raw/master/pubs/iotdi_16.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/iotdi_16.pdf">PDF</a>]</p>
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
   SenSys 2014<br>
-  [<a href="raw/master/pubs/sensys_14.pdf">PDF</a>][<a href="raw/master/pubs/sensys_14.pptx">Slides</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_14.pdf">PDF</a>][<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_14.pptx">Slides</a>]</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
   IPSN 2012<br>
-  [<a href="raw/master/pubs/ipsn_12.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/ipsn_12.pdf">PDF</a>]</p>
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
   <i>Affiliated demo won the Best Demo Award</i><br>
-  [<a href="raw/master/pubs/ubicomp_11.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
 <p>Automated Wireless Localization Data Acquisition and Calibration with 6DOF Image Localization<br>
 Jonathan Fürst, <u>Kaifei Chen</u>, Gürkan Solmaz, Ernö Kovacs<br>
   The International Workshop on Combining Physical and Data-Driven Knowledge in Ubiquitous Computing (CPD) 2018<br>
-  [<a href="raw/master/pubs/cpd18.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/cpd18.pdf">PDF</a>]</p>
 <p>Towards Adaptive Actors for Scalable IoT Applications at the Edge<br>
   Jonathan Fürst, Mauricio Fadel Argerich, <u>Kaifei Chen</u>, Ernö Kovacs<br>
   The International Workshop on Very Large Internet of Things (VLIoT) 2018<br>
@@ -63,46 +63,46 @@ Jonathan Fürst, <u>Kaifei Chen</u>, Gürkan Solmaz, Ernö Kovacs<br>
 <p>Evaluating Bluetooth Low Energy for IoT<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Hyung-Sin Kim, Philippe Bonnet.<br>
   The International Workshop on Benchmarking Cyber-Physical Networks and Systems (CPSBench) 2018<br>
-  [<a href="raw/master/pubs/cpsbench_18.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/cpsbench_18.pdf">PDF</a>]</p>
 <p>Crowd-sourced BMS Point Matching and Metadata Maintenance with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
   The International Workshop on Crowd-Assisted Sensing, Pervasive Systems, and Communications (CASPer) 2016<br>
-  [<a href="raw/master/pubs/casper_16.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/casper_16.pdf">PDF</a>]</p>
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
   <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
   The International Workshop on IoT Challenges in Mobile and Industrial Systems (IoT-Sys) 2015<br>
-  [<a href="raw/master/pubs/iot-sys_15.pdf">PDF</a>][<a href="raw/master/pubs/iot-sys_15.pptx">Slides</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/iot-sys_15.pdf">PDF</a>][<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/iot-sys_15.pptx">Slides</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
   BuildSys 2012<br>
-  [<a href="raw/master/pubs/buildsys_12.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/buildsys_12.pdf">PDF</a>]</p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Chieh-Jan Mike Liang, and Feng Zhao.<br>
   The International Workshop on Mobile Sensing 2012<br>
-  [<a href="raw/master/pubs/wms_12.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/wms_12.pdf">PDF</a>]</p>
 <h4>Demos</h4>
 <p>Smart Appliance Identification using Smartphone Camera<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, David E. Culler, and Randy H. Katz.<br>
   HotMobile 2017<br>
-  [<a href="raw/master/pubs/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo Abstract: Human-in-the-loop BMS Point Matching and Metadata Labeling with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
   BuildSys 2015<br>
-  [<a href="raw/master/pubs/buildsys_15_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/buildsys_15_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
   <i>Best Demo Award</i><br>
-  [<a href="raw/master/pubs/sensys_11_demo_abstract.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/sensys_11_demo_abstract.pdf">PDF</a>]</p>
 <h4>Posters</h4>
 <p>Poster Abstract: Intuitive Appliance Identification using Image Matching in Smart Buildings<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, Dezhi Hong, and Randy H. Katz.<br>
   BuildSys 2015<br>
-  [<a href="raw/master/pubs/buildsys_15_poster_abstract.pdf">PDF</a>] [<a href="raw/master/pubs/buildsys_15_poster.pdf">Poster</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/buildsys_15_poster_abstract.pdf">PDF</a>] [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/buildsys_15_poster.pdf">Poster</a>]</p>
 <p>Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
   IPSN 2012<br>
-  [<a href="raw/master/pubs/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
+  [<a href="https://github.com/kaifeichen/kaifeichen.github.io/raw/master/pubs/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
 <p>Vision-based Appliance Identification and Control with Smartphone Sensors in Commercial Buildings<br>
   <u>Kaifei Chen</u>.<br>
