--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>[My First Name]<img src="./img/at-symbol.jpg" height="16">berkeley.edu</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p>Kaifei is a Software Engineer at <a href="https://waymo.com/">Waymo</a>. He obtained his Ph.D. in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a> in summer 2018, advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/katz.html">Prof. Randy Katz</a> and <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/culler.html">Prof. David Culler</a>. He was in the <a href="http://bets.cs.berkeley.edu/">Building, Energy, Transportation Systems</a> group. His research interests are in the areas of sensor systems, networking, and applications, such as indoor localization, mobile augmented reality, and smart buildings.</p>
+<p>I am a Software Engineer at <a href="https://waymo.com/">Waymo</a>. I obtained my Ph.D. in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a> in summer 2018, advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/katz.html">Prof. Randy Katz</a> and <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/culler.html">Prof. David Culler</a>. At Berkeley, I was in the <a href="http://bets.cs.berkeley.edu/">Building, Energy, Transportation Systems</a> group. My research interests are in the areas of sensor systems, networking, and applications, such as indoor localization, mobile augmented reality, and smart buildings.</p>
 <br>
 
 <h3>Publications</h3>
